--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,110 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+.sparks {
+    opacity: 0;
+}
+
+.like-icon:hover {
+    cursor: pointer;
+}
+
+.like-icon .core {
+    fill: var(--background-color);
+    transition: fill 0.3s ease-out 0.05s;
+}
+
+.like-icon .main-body {
+    fill: var(--background-color);
+    transition: fill 0.3s ease-in-out 0.05s;
+}
+
+.like-icon:hover .core {
+    fill: var(--border-color);
+    transition: fill 0.3s ease-in-out 0.05s;
+}
+
+.like-icon:hover .main-body {
+    fill: var(--border-color);
+    transition: fill 0.3s ease-in-out 0.05s;
+}
+
+.card__icon-button:active {
+    outline: none;
+}
+
+.like-icon:active .core {
+    transition: fill 0.3s linear;
+    fill: var(--like-color);
+}
+
+.like-icon:active .main-body {
+    transition: fill 0.3s linear;
+    fill: var(--like-color);
+}
+
+.like-icon.is-liked .contour {
+    fill: var(--like-color);
+}
+
+.like-icon.is-liked .core {
+    fill: var(--like-color);
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--like-color);
+}
+
+.card__icon-button:focus-visible {
+    transition: border 0.3s linear;
+    border: 2px solid var(--border-color);
+}
+
+.card__icon-button:focus {
+    outline: none;
+}
+
+.like-icon.is-liked {
+    animation: big-heart 0.3s 0.1s ease-in 1 alternate;
+    transform-origin: center;
+}
+
+@keyframes big-heart {
+    from {
+        scale: 1;
+    }
+    to {
+        scale: 1.15;
+        fill: var(--like-color);
+    }
+}
+
+.like-icon.is-liked .sparks {
+    animation: firework 0.3s 0.3s ease-in 1 alternate;;
+}
+
+@keyframes firework {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 100%;
+    }
+}
+
+.theme-menu__button:disabled::before {
+    content: "▶";
+    position: absolute;
+    display: inline-block;
+    left: -15px;
+    animation: rocking 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes rocking {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(4px);
+    }
+}
