--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,47 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+    --border-color: #00cc14;
+    --font-color: #00cc14;
+    --background-color: #000;
+    --background-color-inverse: #00cc14;
+    --text-color-inverse: #00cc14;
+    --background-gradient-image: repeating-linear-gradient(to right, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(to bottom, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#007f0c 0.01%, #004306);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --border-color: #00cc14;
+        --font-color: #00cc14;
+        --background-color: #000;
+        --text-color-inverse: #00cc14;
+        --background-gradient-image: repeating-linear-gradient(to right, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+        repeating-linear-gradient(to bottom, #000 0 2px, rgb(211 211 211 / 0) 2px 4px),
+        linear-gradient(#007f0c 0.01%, #004306);
+    }
+}
+
+:root.theme-light {
+    --font-color: #000000;
+    --border-color: #000000;
+    --background-color: #FFFFFF;
+    --text-color-inverse: #FFF;
+    --background-gradient-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --font-color: #000000;
+        --border-color: #000000;
+        --background-color: #FFFFFF;
+        --text-color-inverse: #000000;
+        --background-gradient-image: repeating-linear-gradient(to right, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+        repeating-linear-gradient(to bottom, #d3d3d3 0 2px, rgb(211 211 211 / 0) 2px 4px),
+        linear-gradient(#e7e7e7 0.01%, #1a1a1a);
+    }
+}
