--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,8 @@
 :root {
-    --accent-color: default;
-    --border-color: var(--border-color);
-    --font-color: var(--font-color);
-    --background-color: var(--background-color);
+    --accent-color: default, #000;
+    --border-color: var(--border-color), #00cc14;
+    --font-color: var(--font-color), #00cc14;
+    --background-color: var(--background-color), #000;
     --font-pixel_style: 'PressStart2P-Regular', sans-serif;
     --font-regular: 'Inter-Variable', sans-serif;
     --like-color: #FF0000;
